feat(dx12): 新增纯Java D3D12封装层与配套JNI接口
- 新增C++原生接口与Java JNI绑定：枚举DXGI适配器返回JSON、获取设备/命令队列句柄、创建销毁隐藏测试窗口
- 新增`com.dx12.d3d12`包下的纯Java D3D12工具类，包含适配器信息、设备上下文、Surface管理功能
- 完善Gradle构建配置，添加JUnit5测试依赖并启用JUnit平台测试
- 优化DX12表面渲染逻辑：补充调试日志、修复空指针判断、开启红色清屏调试宏
- 删除旧的JNA COM代理调试测试类文件
- 更新二进制驱动dll文件与开发记录文档，记录纯Java D3D12包的探索进度